--- a/styles.css
+++ b/styles.css
@@ -188,12 +188,12 @@ img.rounded {
 
 a:link,
 a:visited {
-    color: hsl(204, 86%, 53%) ;
+    color: #000000 ;
     text-decoration: none;
 }
 
 a:hover {
-    text-decoration: underline hsl(204, 86%, 53%) ;
+    text-decoration: underline #f14d68 ;
 }
 
 td.dl-link {
@@ -456,25 +456,24 @@ sup {
     letter-spacing: .1em;
 }
 
+.no_hover{
+	color:  white;
+    text-decoration: none;
+}
+.no_hover:hover{
+	color:  #f14d68;
+    text-decoration: none;
+}
+/* .no_hover,
 .no_hover:link,
 .no_hover:visited {
     color:  white;
     text-decoration: none;
 }
 .no_hover:hover {
-    color:  hsl(204, 86%, 53%);
+    color:  #f14d68;
     text-decoration: none;
-}
-
-.no_hover_orange:link,
-.no_hover_orange:visited {
-    color:  white;
-    text-decoration: none;
-}
-.no_hover_orange:hover {
-    color:  #ff6d04;
-    text-decoration: none;
-}
+} */
 
 
 .black {
@@ -570,8 +569,8 @@ sup {
 }
 
 .pv2 {
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
 }
 
 .ph3 {
